# ebm3-sterodynamics

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: pythonpackage.yml
modules/ebm3/sterodynamics/: ebm3_oceandynamics_project.py  ebm3_thermalexpansion_project.py  pipeline.global.yml  pipeline.yml
src/ebm3_sterodynamics/: __init__.py  cli.py  ebm3_oceandynamics_project.py  ebm3_thermalexpansion_project.py  energy_balance_model.py
