[project]
name = "ebm3-sterodynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "ipython>=9.14.0",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "xarray>=2026.4.0",
]

[project.scripts]
ebm3-sterodynamics = "ebm3_sterodynamics:cli.main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"